tests/diagnostics_golden/diag_pr118c1_print_bare_identifier.txt
Diagnostics Golden: PR11.8c.1 Bare Print Identifier
Source: tests/negative/neg_pr118c1_print_bare_identifier.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_pr118c1_print_bare_identifier.safe:3:22: error: `print` is a statement, not an expression
  |
  | 3 |    value : integer = print
  |   |                      ^~~~~
  |
------------------------------------------------------------------------
